
MASTER

* Rails2.3 - Implement #outside_transaction? and a new transaction test case to test some SQL Server 
  basic support while implementing this method. Future home of some savepoint tests too. [Ken Collins]

* Rails2.3 - Coerced tests that ensure hash conditions on referenced tables are considered when eager 
  loading with limit/offset. Information on these changes and the ticket in rails are.
  http://github.com/rails/rails/commit/9a4d557713acb0fc8e80f61af18094034aca029a
  http://rails.lighthouseapp.com/projects/8994-ruby-on-rails/tickets/1404-conditions_tables-doesnt-understand-condition-hashes

* Rails2.3 - Add coerced tests for true/false attributes in selects use SQL Server case statement. [Ken Collins]

* Making sure that smalldatetime types are OK to use. Also fixed a bug in the #view_information method that 
  checks to see if a view definition is equal to 4000 chars, meaning that it is most likely truncated and 
  needs to use the backup method of sp_helptext to get it's view definition. [Ken Collins]


* 2.2.13 * (February 10th, 2009)

* Update #indexes to use unqualified table name. Fixes cases where users may decide to use table 
  name prefixes like 'dbo.'. [Ken Collins]


* 2.2.12 * (February 8th, 2009)

* Update table_exists? to work with qualified table names that may include an user prefix. [Ken Collins]


* 2.2.10/11 * (January 22nd, 2009)

* Add a rails-sqlserver-2000-2005-adapter.rb file so that long :lib option for config.gem is no longer needed.


* 2.2.9 * (January 22nd, 2009)

* Fixing a small bug in the deprecated DBI::Timestamp conversion so it correctly converts nanosecond whole 
  numbers to back to pre type cast SQL Server milliseconds, ultimately allow ruby's Time#usec which is 
  microseconds to be correct. [Ken Collins]
  
* Sometimes views are more than 4000 chars long and will return NULL for the VIEW_DEFINITION. If so, use 
  sp_helptext procedure as a backup method. [Ken Collins]


* 2.2.8 (January 9th, 2009)
