@@ -1,6 +1,9 @@
 
 MASTER
 
+* Rails2.3 - Implement a custom ActiveRecord::Associations::ClassMethods::JoinDependency::JoinAssociation#aliased_table_name_for
+  method that uses a Regexp.escape so that table/column quoting does not get ignored. [Ken Collins]
+
 * Rails2.3 - Implement #outside_transaction? and a new transaction test case to test some SQL Server 
   basic support while implementing this method. Future home of some savepoint tests too. [Ken Collins]
 
